Add pagination support to /stats/submitters endpoint
